--- a/.github/workflows/iac-pipline.yml
+++ b/.github/workflows/iac-pipline.yml
@@ -33,26 +33,26 @@ jobs:
         id: init
         run: terraform init
 
-    #   - name: Terraform Validate
-    #     id: validate
-    #     run: terraform validate
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate
 
-    #   - name: Run Terrascan
-    #     run: |
-    #       pwd
-    #       docker run --rm -v $(pwd):/workspace -w /workspace accurics/terrascan scan -t aws -d .
-    #     continue-on-error: true
+      - name: Run Terrascan
+        run: |
+          pwd
+          docker run --rm -v $(pwd):/workspace -w /workspace accurics/terrascan scan -t aws -d .
+        continue-on-error: true
         
-    #   - name: Terraform Plan
-    #     id: plan
-    #     run: terraform plan -no-color 
-    #     continue-on-error: true
+      - name: Terraform Plan
+        id: plan
+        run: terraform plan -no-color 
+        continue-on-error: true
 
-    #   # - name: Terraform Plan Status
-    #   #   if: steps.plan.outcome == 'failure'
-    #   #   run: exit 1
+      # - name: Terraform Plan Status
+      #   if: steps.plan.outcome == 'failure'
+      #   run: exit 1
 
-    #   - name: Terraform Apply
-    #     id: apply
-    #     if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-    #     run: terraform apply -auto-approve 
+      - name: Terraform Apply
+        id: apply
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -auto-approve 
