--- a/.github/workflows/iac-pipline.yml
+++ b/.github/workflows/iac-pipline.yml
@@ -33,19 +33,19 @@ jobs:
         id: init
         run: terraform init
 
-      - name: Terraform Validate
-        id: validate
-        run: terraform validate
+      # - name: Terraform Validate
+      #   id: validate
+      #   run: terraform validate
 
-      - name: Run Terrascan
-        run: |
-          pwd
-          docker run --rm -v $(pwd):/workspace -w /workspace accurics/terrascan scan -t aws -d .
-        continue-on-error: true
+      # - name: Run Terrascan
+      #   run: |
+      #     pwd
+      #     docker run --rm -v $(pwd):/workspace -w /workspace accurics/terrascan scan -t aws -d .
+      #   continue-on-error: true
         
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color 
+        run: terraform plan -out=tfplan
         continue-on-error: true
 
       # - name: Terraform Plan Status
@@ -54,5 +54,5 @@ jobs:
 
       - name: Terraform Apply
         id: apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve 
+        # if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform cloud apply -auto-approve tfplan
