test conniction to terraform cloud

--- a/.github/workflows/iac-pipline.yml
+++ b/.github/workflows/iac-pipline.yml
@@ -55,4 +55,4 @@ jobs:
       - name: Terraform Apply
         id: apply
         # if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform cloud apply -auto-approve tfplan
+        run: terraform apply -auto-approve tfplan
