--- a/.github/workflows/iac-pipline.yml
+++ b/.github/workflows/iac-pipline.yml
@@ -41,11 +41,13 @@ jobs:
       #   run: |
       #     pwd
       #     docker run --rm -v $(pwd):/workspace -w /workspace accurics/terrascan scan -t aws -d .
-        #   continue-on-error: true
+      #   continue-on-error: true
         
       - name: Terraform Plan
         id: plan
-        run: terraform plan -out=tfplan
+        run: terraform plan -no-color 
+        continue-on-error: true
+        
 
       # - name: Terraform Plan Status
       #   if: steps.plan.outcome == 'failure'
@@ -53,5 +55,5 @@ jobs:
 
       - name: Terraform Apply
         id: apply
-        # if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve tfplan
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -auto-approve 
