--- a/.github/workflows/iac-pipline.yml
+++ b/.github/workflows/iac-pipline.yml
@@ -42,10 +42,10 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color -var-file=variables.tfvars
+        run: terraform plan -no-color
 
       # Uncomment to apply changes automatically (ensure this is desired and safe in your environment)
       # - name: Terraform Apply
       #   id: apply
       #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      #   run: terraform apply -auto-approve -var-file=variables.tfvars
+      #   run: terraform apply -auto-approve
