--- a/.github/workflows/iac-pipline.yml
+++ b/.github/workflows/iac-pipline.yml
@@ -45,12 +45,12 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color -var-file=variables.tfvars
+        run: terraform plan -no-color 
 
       - name: Terraform Apply
         id: apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve -var-file=variables.tfvars
+        run: terraform apply -auto-approve 
 
       - name: Install AWS CLI and kubectl
         run: |
