--- a/.github/workflows/iac-pipline.yml
+++ b/.github/workflows/iac-pipline.yml
@@ -52,23 +52,23 @@ jobs:
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve 
 
-      - name: Install AWS CLI and kubectl
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y awscli
-          curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
-          chmod +x ./kubectl
-          sudo mv ./kubectl /usr/local/bin/kubectl
+      # - name: Install AWS CLI and kubectl
+      #   run: |
+      #     sudo apt-get update
+      #     sudo apt-get install -y awscli
+      #     curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
+      #     chmod +x ./kubectl
+      #     sudo mv ./kubectl /usr/local/bin/kubectl
 
-      - name: Configure kubectl
-        run: |
-          aws eks update-kubeconfig --name dino-cluster --region $AWS_REGION
+      # - name: Configure kubectl
+      #   run: |
+      #     aws eks update-kubeconfig --name dino-cluster --region $AWS_REGION
           
-      - name: Install Ansible
-        run: |
-          pip install ansible
-          ansible-galaxy collection install community.kubernetes
+      # - name: Install Ansible
+      #   run: |
+      #     pip install ansible
+      #     ansible-galaxy collection install community.kubernetes
 
-      - name: Create Jenkins namespace with Ansible
-        run: |
-          ansible-playbook ../ansible/create_namespace.yml
+      # - name: Create Jenkins namespace with Ansible
+      #   run: |
+      #     ansible-playbook ../ansible/create_namespace.yml
