--- a/.github/workflows/iac-pipline.yml
+++ b/.github/workflows/iac-pipline.yml
@@ -25,32 +25,32 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+      # - name: Setup Terraform
+      #   uses: hashicorp/setup-terraform@v3
+      #   with:
+      #     cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-      - name: Terraform Init
-        id: init
-        run: terraform init
+      # - name: Terraform Init
+      #   id: init
+      #   run: terraform init
 
-      - name: Terraform Validate
-        id: validate
-        run: terraform validate
+      # - name: Terraform Validate
+      #   id: validate
+      #   run: terraform validate
 
-      - name: Run Terrascan
-        run: |
-          docker run --rm -v $(pwd):/workspace -w /workspace accurics/terrascan scan -t aws -d .
-        continue-on-error: true
+      # - name: Run Terrascan
+      #   run: |
+      #     docker run --rm -v $(pwd):/workspace -w /workspace accurics/terrascan scan -t aws -d .
+      #   continue-on-error: true
 
-      - name: Terraform Plan
-        id: plan
-        run: terraform plan -no-color 
+      # - name: Terraform Plan
+      #   id: plan
+      #   run: terraform plan -no-color 
 
-      - name: Terraform Apply
-        id: apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve 
+      # - name: Terraform Apply
+      #   id: apply
+      #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      #   run: terraform apply -auto-approve 
 
       - name: Create Jenkins Namespace
         run: |
@@ -62,7 +62,7 @@ jobs:
 
       - name: Configure kubectl
         run: |
-          aws eks update-kubeconfig --name dino-cluster --region $AWS_REGION
+          aws eks update-kubeconfig --name dino-cluster --region us-east-1
           
       - name: Install Ansible
         run: |
