--- a/ansible/create_namespace.yml
+++ b/ansible/create_namespace.yml
@@ -1,9 +1,10 @@
 ---
-- name: Create a k8s namespace
+- name: Create Jenkins Namespace
   hosts: localhost
-
-  kubernetes.core.k8s:
-    api_version: v1
-    kind: Namespace
-    name: jenkins
-    state: present
+  tasks:
+    - name: Create Kubernetes Namespace
+      k8s:
+        api_version: v1
+        kind: Namespace
+        name: jenkins
+        state: present
