--- a/ansible/deploy_jenkins.yml
+++ b/ansible/deploy_jenkins.yml
@@ -1,44 +1,28 @@
 ---
-- name: Deploy Jenkins
+- name: Deploy Jenkins on Kubernetes
   hosts: localhost
   tasks:
-    - name: Create Jenkins Deployment
-      k8s:
-        definition: 
-          apiVersion: apps/v1
-          kind: Deployment
-          metadata:
-            name: jenkins
-            namespace: jenkins
-          spec:
-            replicas: 1
-            selector:
-              matchLabels:
-                app: jenkins
-            template:
-              metadata:
-                labels:
-                  app: jenkins
-              spec:
-                containers:
-                - name: jenkins
-                  image: jenkins/jenkins:lts
-                  ports:
-                  - containerPort: 8080
-                  - containerPort: 50000
+    - name: Apply Namespace
+      kubernetes.core.k8s:
+        state: present
+        definition: "{{ lookup('file', 'ansible/namespace.yaml') }}"
 
-    - name: Create Jenkins Service
-      k8s:
-        definition:
-          apiVersion: v1
-          kind: Service
-          metadata:
-            name: jenkins
-            namespace: jenkins
-          spec:
-            type: LoadBalancer
-            ports:
-            - port: 8080
-              targetPort: 8080
-            selector:
-              app: jenkins
+    - name: Apply Service Account and Cluster Role Binding
+      kubernetes.core.k8s:
+        state: present
+        definition: "{{ lookup('file', 'ansible/service_account_and_cluster_role_binding.yaml') }}"
+
+    - name: Apply Persistent Volume Claim
+      kubernetes.core.k8s:
+        state: present
+        definition: "{{ lookup('file', 'ansible/persistent_volume_claim.yaml') }}"
+
+    - name: Apply Jenkins Deployment
+      kubernetes.core.k8s:
+        state: present
+        definition: "{{ lookup('file', 'ansible/jenkins_deployment.yaml') }}"
+
+    - name: Apply Jenkins Service
+      kubernetes.core.k8s:
+        state: present
+        definition: "{{ lookup('file', 'ansible/jenkins_service.yaml') }}"
