--- a/ansible/jenkins_service.yaml
+++ b/ansible/jenkins_service.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jenkins
-  namespace: {{ jenkins_namespace }}
+  namespace: jenkins
 spec:
-  type: {{ jenkins_service_type }}
+  type: LoadBalancer
   ports:
     - port: 80
       targetPort: 8080
