--- a/ansible/jenkins_deployment.yaml
+++ b/ansible/jenkins_deployment.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: jenkins
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: jenkins
   template:
     metadata:
       labels:
@@ -20,7 +23,7 @@ spec:
         volumeMounts:
         - name: jenkins-pv
           mountPath: /var/jenkins_home
-  volumes:
-  - name: jenkins-pv
-    persistentVolumeClaim:
-      claimName: jenkins-pv-claim
+      volumes:
+      - name: jenkins-pv
+        persistentVolumeClaim:
+          claimName: jenkins-pv-claim
