--- a/.github/workflows/iac-pipline.yml
+++ b/.github/workflows/iac-pipline.yml
@@ -19,7 +19,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
-      AWS_REGION: "your-aws-region" # Replace with your AWS region
+      AWS_REGION: "us-east-1"
 
     steps:
       - name: Checkout code
@@ -94,10 +94,7 @@ jobs:
           pip install jsonpatch kubernetes PyYAML
           ansible-galaxy collection install community.kubernetes
 
-      # - name: Create Jenkins namespace with Ansible
-      #   run: |
-      #     ansible-playbook create_namespace.yml
       
       - name: Deploy Jenkins with Ansible
         run: |
-          ansible-playbook deploy_jenkins.yml
+          ansible-playbook jnk_deploy_jenkins_playbook.yml
