--- a/ansible/jnk-pvc.yaml
+++ b/ansible/jnk-pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: jenkins-pvc
+  name: jenkins-pvc-claim
   namespace: jenkins
 spec:
   accessModes:
