--- a/.github/workflows/app-pipline.yml
+++ b/.github/workflows/app-pipline.yml
@@ -1,36 +1,36 @@
-name: App Publish Pipeline
+# name: App Publish Pipeline
 
-on:
-  push:
-    branches:
-      - main
-    paths: 
-      - google-dino-game/**
+# on:
+#   push:
+#     branches:
+#       - main
+#     paths: 
+#       - google-dino-game/**
 
-jobs:
+# jobs:
  
-  publish-app:
-    runs-on: ubuntu-latest
+#   publish-app:
+#     runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+#     steps:
+#     - name: Checkout Code
+#       uses: actions/checkout@v4
 
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
+#     - name: Set up QEMU
+#       uses: docker/setup-qemu-action@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+#     - name: Set up Docker Buildx
+#       uses: docker/setup-buildx-action@v3
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+#     - name: Login to Docker Hub
+#       uses: docker/login-action@v3
+#       with:
+#         username: ${{ secrets.DOCKERHUB_USERNAME }}
+#         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and push
-      uses: docker/build-push-action@v6
-      with:
-        context: ./google-dino-game
-        push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/google-dino:latest
+#     - name: Build and push
+#       uses: docker/build-push-action@v6
+#       with:
+#         context: ./google-dino-game
+#         push: true
+#         tags: ${{ secrets.DOCKERHUB_USERNAME }}/google-dino:latest
