--- a/.github/workflows/iac-pipline.yml
+++ b/.github/workflows/iac-pipline.yml
@@ -8,93 +8,93 @@ on:
       # - terraform/**
 
 jobs:
-  # terraform:
-  #   name: "Terraform"
-  #   runs-on: ubuntu-latest
-  #   defaults:
-  #     run:
-  #       shell: bash
-  #       working-directory: ./terraform
-  #   env:
-  #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #     TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
-  #     AWS_REGION: "us-east-1"
-
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v2
-
-  #     - name: Setup Terraform
-  #       uses: hashicorp/setup-terraform@v3
-  #       with:
-  #         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-
-  #     - name: Terraform Init
-  #       id: init
-  #       run: terraform init
-
-  #     - name: Terraform Validate
-  #       id: validate
-  #       run: terraform validate
-
-  #     - name: Run Terrascan
-  #       run: |
-  #         docker run --rm -v $(pwd):/workspace -w /workspace accurics/terrascan scan -t aws -d .
-  #       continue-on-error: true
-
-  #     - name: Terraform Plan
-  #       id: plan
-  #       run: terraform plan -no-color 
-
-  #     - name: Terraform Apply
-  #       id: apply
-  #       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-  #       run: terraform apply -auto-approve 
-
-  ansible:
-    name: "Ansible"
+  terraform:
+    name: "Terraform"
     runs-on: ubuntu-latest
-    # needs: terraform
     defaults:
       run:
         shell: bash
-        working-directory: ./ansible
-
+        working-directory: ./terraform
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
-      AWS_REGION: "your-aws-region" # Replace with your AWS region
+      AWS_REGION: "us-east-1"
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
         with:
-          python-version: '3.12.4'
-  
-      - name: Create Jenkins Namespace
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y awscli
-          curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
-          chmod +x ./kubectl
-          sudo mv ./kubectl /usr/local/bin/kubectl
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-      - name: Configure kubectl
+      - name: Terraform Init
+        id: init
+        run: terraform init
+
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate
+
+      - name: Run Terrascan
         run: |
-          aws eks update-kubeconfig --name dino-cluster --region us-east-1
+          docker run --rm -v $(pwd):/workspace -w /workspace accurics/terrascan scan -t aws -d .
+        continue-on-error: true
+
+      - name: Terraform Plan
+        id: plan
+        run: terraform plan -no-color 
+
+      - name: Terraform Apply
+        id: apply
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -auto-approve 
+
+  # ansible:
+  #   name: "Ansible"
+  #   runs-on: ubuntu-latest
+  #   # needs: terraform
+  #   defaults:
+  #     run:
+  #       shell: bash
+  #       working-directory: ./ansible
+
+  #   env:
+  #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #     TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+  #     AWS_REGION: "your-aws-region" # Replace with your AWS region
+
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v2
+
+  #     - name: Set up Python
+  #       uses: actions/setup-python@v5
+  #       with:
+  #         python-version: '3.12.4'
+  
+  #     - name: Create Jenkins Namespace
+  #       run: |
+  #         sudo apt-get update
+  #         sudo apt-get install -y awscli
+  #         curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
+  #         chmod +x ./kubectl
+  #         sudo mv ./kubectl /usr/local/bin/kubectl
+
+  #     - name: Configure kubectl
+  #       run: |
+  #         aws eks update-kubeconfig --name dino-cluster --region us-east-1
           
-      - name: Install Ansible and Required Python Packages
-        run: |
-          pip install ansible
-          pip install jsonpatch kubernetes PyYAML
-          ansible-galaxy collection install community.kubernetes
+  #     - name: Install Ansible and Required Python Packages
+  #       run: |
+  #         pip install ansible
+  #         pip install jsonpatch kubernetes PyYAML
+  #         ansible-galaxy collection install community.kubernetes
 
       
-      - name: Deploy Jenkins with Ansible
-        run: |
-          ansible-playbook jnk_deploy_jenkins_playbook.yml
+  #     - name: Deploy Jenkins with Ansible
+  #       run: |
+  #         ansible-playbook jnk_deploy_jenkins_playbook.yml
