--- a/ansible/jnk-deployment.yaml
+++ b/ansible/jnk-deployment.yaml
@@ -18,7 +18,7 @@ spec:
       serviceAccountName: jenkins-sa
       containers:
         - name: jenkins
-          image: jenkins/jenkins:lts
+          image: jenkins/jenkins:lts-jdk17
           ports:
             - containerPort: 8080
 
