--- a/ansible/jnk-deployment.yaml
+++ b/ansible/jnk-deployment.yaml
@@ -23,7 +23,7 @@ spec:
           image: jenkins/jenkins:lts-jdk17
           ports:
             - containerPort: 8080
-            - containerPort: 50000
+            - containerPort: 50 000
 
           volumeMounts:
             - name: jenkins-data
