--- a/.github/workflows/iac-pipline.yml
+++ b/.github/workflows/iac-pipline.yml
@@ -8,49 +8,49 @@ on:
       - terraform/**
       - ansible/**
 jobs:
-  terraform:
-    name: "Terraform"
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-        working-directory: ./terraform
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
-      AWS_REGION: "us-east-1"
+  # terraform:
+  #   name: "Terraform"
+  #   runs-on: ubuntu-latest
+  #   defaults:
+  #     run:
+  #       shell: bash
+  #       working-directory: ./terraform
+  #   env:
+  #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #     TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+  #     AWS_REGION: "us-east-1"
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v2
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+  #     - name: Setup Terraform
+  #       uses: hashicorp/setup-terraform@v3
+  #       with:
+  #         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-      - name: Terraform Init
-        id: init
-        run: terraform init
+  #     - name: Terraform Init
+  #       id: init
+  #       run: terraform init
 
-      - name: Terraform Validate
-        id: validate
-        run: terraform validate
+  #     - name: Terraform Validate
+  #       id: validate
+  #       run: terraform validate
 
-      - name: Run Terrascan
-        run: |
-          docker run --rm -v $(pwd):/workspace -w /workspace accurics/terrascan scan -t aws -d .
-        continue-on-error: true
+  #     - name: Run Terrascan
+  #       run: |
+  #         docker run --rm -v $(pwd):/workspace -w /workspace accurics/terrascan scan -t aws -d .
+  #       continue-on-error: true
 
-      - name: Terraform Plan
-        id: plan
-        run: terraform plan -no-color 
+  #     - name: Terraform Plan
+  #       id: plan
+  #       run: terraform plan -no-color 
 
-      - name: Terraform Apply
-        id: apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve 
+  #     - name: Terraform Apply
+  #       id: apply
+  #       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+  #       run: terraform apply -auto-approve 
 
   ansible:
     name: "Ansible"
