--- a/ansible/jnk-service.yaml
+++ b/ansible/jnk-service.yaml
@@ -11,3 +11,17 @@ spec:
     - port: 8080
       targetPort: 8080
   type: LoadBalancer 
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: jenkins
+  namespace: jenkins
+spec:
+  selector:
+    app: jenkins
+  ports:
+    - port: 50000
+      targetPort: 50000
+  type: LoadBalancer 
