--- a/ansible/jnk-deployment.yaml
+++ b/ansible/jnk-deployment.yaml
@@ -20,7 +20,7 @@ spec:
       serviceAccountName: jenkins-sa
       containers:
         - name: jenkins
-          image: jenkins/jenkins:lts-jdk17
+          image: jenkins/jenkins:lts
           ports:
             - containerPort: 8080
             - containerPort: 50000
