--- a/app-manifest-files/service.yaml
+++ b/app-manifest-files/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: dino-app-service
-  namespace: dino-app 
+  namespace: dino-namespace 
 spec:
   type: LoadBalancer 
   selector:
